assets/12-kuber-08/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: deployment
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          volumeMounts:
            - name: nginx
              mountPath: /usr/share/nginx/html/
          ports:
            - containerPort: 80
              name: http-port
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "150m"
              memory: "200Mi"
        - name: busybox
          image: busybox
          command:
            [
              "sh",
              "-c",
              "while true; do watch -n 5 date >> /output/output.txt; sleep 5; done",
            ]
          volumeMounts:
            - name: busybox-volume
              mountPath: /output
      volumes:
        - name: busybox-volume
          hostPath:
            path: /tmp/logs/busybox
        - name: nginx
          configMap:
            name: nginx-configmap
