assets/12-kuber-08/manifests/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  selector:
    app: myapp
  ports:
    - name: nginx-http
      port: 80
      targetPort: 80
